--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rachana Sharma - Portfolio</title>
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Rachana's Portfolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">Rachana Sharma</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -29,73 +25,60 @@
     </div>
   </nav>
 
-  <!-- Header Section -->
   <header class="header text-center">
     <h1>Hello! I'm <span>Rachana Sharma</span></h1>
-    <p>Software Engineering Student | Web Developer | Learning React, C#, .NET, and Java</p>
+    <p>Software Engineering Student | Full-Stack Developer | UI Enthusiast</p>
     <a href="#projects" class="btn btn-outline-light">View My Work</a>
   </header>
 
-  <!-- About Section -->
   <section id="about" class="container text-center py-5">
     <h2>About Me</h2>
-    <p>I am an enthusiastic software engineering student currently studying at VIA University College in Horsens, Denmark. With hands-on experience in web development, I am passionate about building user-friendly applications using technologies such as React, C#, and .NET. My background includes projects like a full-stack project management app and a restaurant table booking system, where I applied concepts of OOP, Agile methodologies, and design patterns.</p>
+    <p>I am a passionate software engineering student at VIA University, Denmark, specializing in front-end and back-end development. 
+       I enjoy crafting intuitive user interfaces and working with scalable systems. My experience spans Java, C#, Blazor, PostgreSQL, and more.</p>
   </section>
 
-  <!-- Skills Section -->
   <section id="skills" class="skills-section text-center py-5 bg-light">
     <div class="container">
       <h2>Skills</h2>
       <div class="row">
-        <div class="col-md-4">
-          <h3>Programming Languages</h3>
-          <p>C#, Java, JavaScript, Python</p>
-        </div>
-        <div class="col-md-4">
-          <h3>Web Development</h3>
-          <p>HTML, CSS, React, Bootstrap</p>
-        </div>
-        <div class="col-md-4">
-          <h3>Software Development</h3>
-          <p>Agile, Scrum, OOP, Design Patterns</p>
-        </div>
+        <div class="col-md-4"><h3>Frontend</h3><p>HTML, CSS, JavaScript, Blazor, React, Bootstrap</p></div>
+        <div class="col-md-4"><h3>Backend</h3><p>Java, C#, Python, SQL, PostgreSQL</p></div>
+        <div class="col-md-4"><h3>Tools & Methods</h3><p>Git, GitHub, Agile, Scrum, MVVM, OOP</p></div>
       </div>
     </div>
   </section>
 
-  <!-- Projects Section -->
   <section id="projects" class="container text-center py-5">
     <h2>Projects</h2>
     <div class="row">
       <div class="col-md-6">
         <div class="project">
-          <h3>Bob the Builder</h3>
-          <p>Full-stack project management app for construction.</p>
-          <p><strong>Technologies Used:</strong> Java, JavaFX, HTML, CSS, JavaScript</p>
+          <h3>Inventory Management System</h3>
+          <p>A three-tier inventory system managing stock, suppliers, and orders.</p>
+          <p><strong>Technologies:</strong> Blazor, Java, PostgreSQL, C#</p>
+          <a href="https://github.com/bibek344326-viaSTE/SEP3_REPO" target="_blank">View on GitHub</a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="project">
-          <h3>Restaurant System</h3>
-          <p>Table booking system with Java and PostgreSQL.</p>
-          <p><strong>Technologies Used:</strong> Java, JavaFX, PostgreSQL</p>
+          <h3>Restaurant Management System</h3>
+          <p>A system for table reservations, order tracking, and menu management.</p>
+          <p><strong>Technologies:</strong> Java, JavaFX, PostgreSQL</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact" class="contact-section py-5">
     <div class="container text-center">
       <h2>Contact Me</h2>
       <p>Email: <a href="mailto:rachana.sharma9754@gmail.com">rachana.sharma9754@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/Rachana-Sharma-rac" target="_blank">Rachana Sharma</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/rachusharma/" target="_blank">Rachana Sharma</a></p>
+      <a href="files/Rachana_CV.pdf" download class="btn btn-light">Download Resume</a>
     </div>
   </section>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Custom JS -->
   <script src="scripts.js"></script>
 </body>
 </html>
