Updated CV file and modified index.html

--- a/index.html
+++ b/index.html
@@ -57,18 +57,23 @@
             <div class="col-md-8">
                 <h2>About Me</h2>
                 <p>
-                  I am a passionate <strong>software engineering student</strong> at VIA University, Denmark, specializing in <strong>full-stack development</strong>. 
-                  I enjoy crafting intuitive user interfaces and working with scalable systems.
+                  I am a passionate <strong>software engineering student</strong> at VIA University, Denmark, specializing in 
+                  <strong>full-stack development</strong>. I enjoy crafting intuitive user interfaces and working with scalable systems.
               </p>
               <p>
                   My experience spans various technologies, including <strong>Java, C#, Blazor, PostgreSQL, and React</strong>. 
                   I am particularly interested in <strong>frontend development and UI/UX design</strong>, where I focus on creating 
-                  modern, user-friendly interfaces.
+                  modern, user-friendly interfaces. Additionally, I am <strong>exploring DevOps</strong> to enhance my understanding 
+                  of software deployment and automation.
               </p>
               <p>
-                  Beyond coding, I love <strong>dancing</strong>, exploring different cultures, and <strong>swimming</strong>.
+                  Beyond coding, I love <strong>swimming</strong>, exploring different cultures, <strong>dancing</strong>, and content creation.
               </p>
-              
+              <p>
+                  I am currently seeking <strong>internship opportunities</strong> to apply my skills in a professional setting and 
+                  contribute to exciting projects. Feel free to reach out if you have any questions or opportunities!
+              </p>
+
                 <a href="#contact" class="btn btn-primary mt-3">Contact information</a>
             </div>
         </div>
@@ -83,7 +88,7 @@
             <div class="col-md-4">
                 <div class="skill-box">
                     <h3>Frontend</h3>
-                    <p>HTML, CSS, JavaScript, Blazor, React, Bootstrap</p>
+                    <p>HTML, CSS, JavaScript, Blazor, React, TypeScript, Bootstrap</p>
                 </div>
             </div>
 
@@ -161,7 +166,7 @@
             <a href="tel:+4571828193" class="btn btn-light">Call Rachana</a>
         </p>
 
-        <p><a href="files/Rachana_CV.pdf" download class="btn btn-light">Download Resume</a></p>
+        <p><a href="files/Rachana-CV.pdf" download class="btn btn-light">Download Resume</a></p>
     </div>
 </section>
 
