Updated index.html and replaced rachana.png image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row align-items-center">
             <!-- Profile Image -->
             <div class="col-md-4 text-center">
-                <img src="files/rachana.png.png" alt="Rachana Sharma" class="profile-img">
+                <img src="files/rachana.png" alt="Rachana Sharma" class="profile-img">
             </div>
             
             <!-- About Me Text -->
